# VIAUMA21-MI-5

./: .env.example  pyproject.toml
backend/: .env.example  README.md  app.py  db_test.py  main.py  requirements.txt  test_auth.py
backend/db/: models.py  mongodb_setup.py  repository.py
backend/routes/: auth.py  main.py  transcribe.py
backend/utils/: logger.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Layout.css  Layout.jsx
frontend/src/pages/: Login.jsx  OAuthCallback.jsx  Record.jsx  Register.jsx  TranscriptDetail.jsx  Transcripts.jsx  Upload.jsx
