[project]
name = "viauma21-mi-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai>=0.46.0",
    "fastapi>=0.121.2",
    "google-auth-oauthlib>=1.2.3",
    "httpx>=0.28.1",
    "pymongo>=4.15.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
